# mochi

./: .gitignore  CMakeLists.txt
include/: controller_base.hpp
include/mochi/: controller_base.hpp  http_server.hpp  json_converter.hpp  logger.hpp
src/: CMakeLists.txt  controller_base.cpp  controller_base.hpp  controller_factory.hpp  controller_factory_base.hpp  dependency_resolver.hpp  globals.hpp  logger.hpp  main.cpp  result.hpp
src/controllers/: AccountController.hpp  CMakeLists.txt  DeviceController.cpp  DeviceController.hpp  TestController.cpp  TestController.hpp
src/core/: CMakeLists.txt  ControllerFactory.hpp  IControllerFactory.hpp  Logger.hpp  Result.hpp  controller_base.cpp  controller_base.hpp  dependency_resolver.hpp
src/core/http/: HttpServer.cpp  HttpServer.hpp  HttpSession.cpp  HttpSession.hpp  web_app_builder.cpp  web_app_builder.hpp
src/core/http/impl/: controller_factories.hpp  web_app_builder_impl.hpp
src/core/impl/: ControllerBaseImpl.hpp
src/core/mapping/: FromJson.hpp  ToJson.hpp
src/core/utility/: ExtensibleTuple.hpp  Hash.hpp  Reflections.hpp  Traits.hpp
src/http/: http_server.cpp  http_server.hpp  http_session.cpp  http_session.hpp  web_app_builder.cpp  web_app_builder.hpp
src/http/impl/: controller_factories.hpp  web_app_builder_impl.hpp
src/impl/: controller_base_impl.hpp
src/mapping/: from_json.hpp  to_json.hpp
src/models/: DeviceInfo.hpp  UserDto.hpp
src/services/: CMakeLists.txt  Database.hpp  DeviceService.cpp  DeviceService.hpp  IDatabase.hpp
src/utility/: hash.hpp  traits.hpp
ut/: CMakeLists.txt  main.cpp
ut/controllers/: CMakeLists.txt  account_controller.hpp  device_controller.cpp  device_controller.hpp  test_controller.cpp  test_controller.hpp
ut/models/: device_info.hpp  user_dto.hpp
ut/services/: database.hpp  database_base.hpp  device_service.cpp  device_service.hpp
